  (Sf.net bug #1510651 - Shlomy Reinstein)

- Show search bar in full screen mode. (Sf.net bug #2944752 - Shlomy Reinstein)

- Got rid of extra Component created as parent of every JToolBar in
  GuiUtilities.loadToolBar() (#2114751 - Alan Ezust)

- After using save-as action on a read-only buffer the new buffer is no longer
  read-only (#3148102 - Matthieu Casanova)

}}}
{{{ API changes

- Added methods to manage the cursor if the TextArea :
  In the TextAreaPainter class, added
  resetCursor()
  setCursor(Cursor)
  The cursor behavior is the following :
  when the cursor is the default one : TEXT_CURSOR,
  when typing text it is hidden, after moving the mouse it reappears.
  If a plugin calls setCursor() to replace it for whatever reason,
  the cursor will not disappear anymore when typing or be changed to
  TEXT_CURSOR until resetCursor() is called (Matthieu Casanova)

- Introduction of a new ThreadUtilities class implementing a
  threadpool using Java 1.6 Concurrent API. Use this instead of
  VFSManager's WorkThreadPool, which is now deprecated.
  Related: A new Task Monitor dockable which will eventually replace
  the I/O progress monitor, for showing progress of tasks.
  Still TODO: rewrite VFSManager + all plugins to use ThreadUtilities
  instead of WorkThreadPool. (Matthieu Casanova)

- Made method TextUtilities.getCharType() public (Matthieu Casanova)

- Method MiscUtilities.formatFileSize() moved to StandardUtilities
  (Matthieu Casanova)

- New method E ServiceManager.getService(Class<E> clazz, String name) to get
  service instance (Matthieu Casanova)

- Register api changed, it now contains Transferable (Matthieu Casanova)

- Added ThreadUtilities utility class (Matthieu Casanova)

- Removed deprecated objectfactory xml parser.

- File System Browser dynamic menu support (#2938170 - François Rey)

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

- bufferSet api rewritten. Now each editPane have its own bufferSet,